# research_assistant

./: README.md  crew_log.txt  md_to_pdf.py  pyproject.toml  report.md
ModelFiles/: ModelFile  ModelFile_researcher  ModelFile_tool_nano
src/research_assistant/: crew.py  main.py
src/research_assistant/config/: agents.yaml  tasks.yaml
src/research_assistant/tools/: custom_tool.py
