[project]
name = "research_assistant"
version = "0.1.0"
description = "research-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-files>=1.10.1",
    "crewai-tools>=1.10.1",
    "crewai[file-processing,tools]==1.10.1",
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "litellm>=1.82.0",
    "markdown-pdf>=1.13.1",
    "utils>=1.0.2",
]

[project.scripts]
research_assistant = "research_assistant.main:run"
run_crew = "research_assistant.main:run"
train = "research_assistant.main:train"
replay = "research_assistant.main:replay"
test = "research_assistant.main:test"
run_with_trigger = "research_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
